Mañana productiva, en 1h solucionados nuestros problemas…xD _ Solucionado bug de z-index _ Solucionado bug del History en la tab 1 _ cache vuelta a configurar en modo cookie

--- a/public/semiems/css/stylep.css
+++ b/public/semiems/css/stylep.css
@@ -305,7 +305,7 @@ header {
   background-color: #fff;
   width: 320px;
   height: 300px;
-  top: 100px;
+  top: 129px;
   border-radius: 10px;
   padding: 20px;
   left: -330px;
@@ -318,23 +318,22 @@ header {
   transition: all, ease-in-out, 0.3s;
   border: solid 5px rgba(0, 0, 0, 0.1);
   text-align: center;
-  opacity: 0.8;
-  z-index: 0; }
+  opacity: 0.8; }
 
-/* line 25, ../sass/_menu.scss */
+/* line 22, ../sass/_menu.scss */
 #wardrobemenu li {
   width: 85%;
   padding: 10px;
   font-size: 1.5em;
   border-bottom: solid 1px rgba(0, 0, 0, 0.3); }
-  /* line 31, ../sass/_menu.scss */
+  /* line 28, ../sass/_menu.scss */
   #wardrobemenu li:last-child {
     border-bottom: none; }
-  /* line 34, ../sass/_menu.scss */
+  /* line 31, ../sass/_menu.scss */
   #wardrobemenu li a {
     display: inline-block;
     text-decoration: none; }
-  /* line 41, ../sass/_menu.scss */
+  /* line 38, ../sass/_menu.scss */
   #wardrobemenu li .delete {
     position: relative;
     float: right;
@@ -347,10 +346,10 @@ header {
     -moz-transition: background-size 0.2s ease;
     -o-transition: background-size 0.2s ease;
     transition: background-size 0.2s ease; }
-    /* line 50, ../sass/_menu.scss */
+    /* line 47, ../sass/_menu.scss */
     #wardrobemenu li .delete:hover {
       background-size: 35px; }
-  /* line 54, ../sass/_menu.scss */
+  /* line 51, ../sass/_menu.scss */
   #wardrobemenu li .edit {
     position: relative;
     float: right;
@@ -364,10 +363,10 @@ header {
     -moz-transition: background-size 0.2s ease;
     -o-transition: background-size 0.2s ease;
     transition: background-size 0.2s ease; }
-    /* line 64, ../sass/_menu.scss */
+    /* line 61, ../sass/_menu.scss */
     #wardrobemenu li .edit:hover {
       background-size: 35px; }
-/* line 69, ../sass/_menu.scss */
+/* line 66, ../sass/_menu.scss */
 #wardrobemenu #link {
   position: absolute;
   right: 8px;
@@ -378,18 +377,18 @@ header {
   height: 350px;
   z-index: 10;
   cursor: pointer; }
-  /* line 79, ../sass/_menu.scss */
+  /* line 76, ../sass/_menu.scss */
   #wardrobemenu #link.close {
     background: url("../img/menuClose.png") no-repeat; }
-/* line 84, ../sass/_menu.scss */
+/* line 81, ../sass/_menu.scss */
 #wardrobemenu:hover {
   opacity: 1;
   left: -319px; }
-/* line 88, ../sass/_menu.scss */
+/* line 85, ../sass/_menu.scss */
 #wardrobemenu.show {
-  position: absolute;
   left: -5px;
-  opacity: 1; }
+  opacity: 1;
+  z-index: 4; }
 
 /* line 1, ../sass/_newstyle.scss */
 .floater {
@@ -985,23 +984,14 @@ body .blur {
 /* line 1, ../sass/_sections.scss */
 .section {
   opacity: 0;
-  -webkit-transform: scale3d(5, 5, 5);
-  -moz-transform: scale3d(5, 5, 5);
-  -ms-transform: scale3d(5, 5, 5);
-  -o-transform: scale3d(5, 5, 5);
-  transform: scale3d(5, 5, 5);
-  -webkit-transition: opacity 0.1s ease, -webkit-transform 0.3s ease;
-  -moz-transition: opacity 0.1s ease, -moz-transform 0.3s ease;
-  -o-transition: opacity 0.1s ease, -o-transform 0.3s ease;
-  transition: opacity 0.1s ease, transform 0.3s ease; }
+  -webkit-transition: opacity 0.1s ease;
+  -moz-transition: opacity 0.1s ease;
+  -o-transition: opacity 0.1s ease;
+  transition: opacity 0.1s ease; }
   /* line 5, ../sass/_sections.scss */
   .section.show {
     opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
-    -moz-transform: scale3d(1, 1, 1);
-    -ms-transform: scale3d(1, 1, 1);
-    -o-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1); }
+    /*@include transform(scale3d(1,1,1));*/ }
 
 /*
 #wardrobe-create:target, #config:target {
@@ -1074,3 +1064,154 @@ body .blur {
     top: 50%;
     left: 50%;
 */
+/* line 1, ../sass/_tabs.scss */
+#tabs {
+  position: relative;
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.4);
+  -webkit-box-shadow: 0 2px 2px rgba(255, 255, 255, 0.2), 0 1px 5px rgba(255, 255, 255, 0.2), 0 0 0 12px rgba(255, 255, 255, 0.4);
+  box-shadow: 0 2px 2px rgba(255, 255, 255, 0.2), 0 1px 5px rgba(255, 255, 255, 0.2), 0 0 0 12px rgba(255, 255, 255, 0.4); }
+
+/* line 11, ../sass/_tabs.scss */
+.ui-tabs {
+  zoom: 1; }
+  /* line 13, ../sass/_tabs.scss */
+  .ui-tabs .ui-tabs-nav {
+    list-style: none;
+    position: relative;
+    padding: 2px 2px 0;
+    overflow: hidden;
+    top: 1px; }
+    /* line 19, ../sass/_tabs.scss */
+    .ui-tabs .ui-tabs-nav li {
+      position: relative;
+      float: left;
+      border-bottom-width: 0 !important;
+      margin: 0 2px -5px 0;
+      /* Murray's */
+      -webkit-transition: all 200ms ease;
+      -moz-transition: all 200ms ease;
+      -o-transition: all 200ms ease;
+      transition: all 200ms ease;
+      top: 5px; }
+      /* line 32, ../sass/_tabs.scss */
+      .ui-tabs .ui-tabs-nav li:hover {
+        top: 0px; }
+  /* line 37, ../sass/_tabs.scss */
+  .ui-tabs .ui-tabs-panel {
+    padding: 20px;
+    display: block;
+    border-width: 0;
+    border: 1px solid #aa7e55;
+    position: relative;
+    min-height: 350px;
+    height: 400px;
+    background: #fff; }
+  /* line 47, ../sass/_tabs.scss */
+  .ui-tabs .ui-tabs-hide {
+    display: none !important; }
+
+/* line 52, ../sass/_tabs.scss */
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected {
+  z-index: 3;
+  border: 1px solid #aa7e55;
+  padding-bottom: 1px;
+  border-bottom-width: 0;
+  background: white;
+  /* Murray's */
+  position: relative;
+  top: -2px;
+  vertical-align: top;
+  display: inline-block; }
+  /* line 63, ../sass/_tabs.scss */
+  .ui-tabs .ui-tabs-nav li.ui-tabs-selected span {
+    display: inline-block;
+    font-size: 10px;
+    text-align: center;
+    width: 15px;
+    margin: 2px 2px 0px 0px;
+    line-height: 15px;
+    color: #463D35;
+    background: #FFF;
+    border: 2px solid #ccaf94;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    font-weight: normal; }
+  /* line 79, ../sass/_tabs.scss */
+  .ui-tabs .ui-tabs-nav li.ui-tabs-selected a {
+    float: left;
+    text-decoration: none;
+    padding: 5px 10px;
+    color: #463D35;
+    font-weight: bold; }
+
+/* line 88, ../sass/_tabs.scss */
+li.ui-state-default {
+  border-radius: 6px;
+  height: 32px;
+  background: #e4c983;
+  border: 1px solid #ccaf94; }
+  /* line 93, ../sass/_tabs.scss */
+  li.ui-state-default span {
+    display: inline-block;
+    font-size: 10px;
+    text-align: center;
+    width: 15px;
+    margin: 2px 2px 0px 0px;
+    line-height: 15px;
+    color: #ccc;
+    background: #FFF;
+    border: 2px solid #ccaf94;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px; }
+  /* line 108, ../sass/_tabs.scss */
+  li.ui-state-default a {
+    float: left;
+    text-decoration: none;
+    padding: 5px 10px;
+    color: #463D35; }
+
+/* line 116, ../sass/_tabs.scss */
+li.ui-state-disabled {
+  background: black;
+  border: 1px solid #ccaf94;
+  cursor: none; }
+
+/* line 122, ../sass/_tabs.scss */
+li.shadowtab {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  border: none;
+  background: none;
+  z-index: 2;
+  -webkit-box-shadow: #111 0 -4px 6px;
+  box-shadow: #111 0 -4px 6px; }
+
+/* line 136, ../sass/_tabs.scss */
+a.mover {
+  padding: 6px 12px 6px 16px;
+  position: absolute;
+  text-decoration: none;
+  background: #F76300;
+  color: white; }
+
+/* line 144, ../sass/_tabs.scss */
+.next-tab {
+  cursor: pointer;
+  bottom: 0;
+  right: 0;
+  border-radius-topleft: 10px;
+  -webkit-border-top-left-radius: 10px; }
+
+/* line 152, ../sass/_tabs.scss */
+.prev-tab {
+  cursor: pointer;
+  bottom: 0;
+  left: 0;
+  border-radius-topright: 10px;
+  -webkit-border-top-right-radius: 10px; }
